Fix email not showing on different size screens.

--- a/css/site.css
+++ b/css/site.css
@@ -141,13 +141,21 @@ textarea {
     border-left: 3px solid ;
     border-color: orange;    
     letter-spacing: 1px;
-    margin-bottom: 90px;
+    margin-bottom: 30px;
+}
+
+.para-home {
+    margin-bottom: 100px;
 }
 
 /* p {
     font-size: 2.1rem;
     line-height: 1.9rem;
 } */
+
+.m-b {
+    margin-bottom: 100px;
+}
 
 h1 {
     color: orange;
